added a page about technologies

--- a/themes/kmom02/css/style.css
+++ b/themes/kmom02/css/style.css
@@ -6453,6 +6453,78 @@ readers do not read off random characters that represent icons */
   font-weight: 400;
 }
 
+.tech-grid {
+  display: grid;
+  gap: 1em;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  margin-bottom: 15px;
+}
+.tech-grid h1 {
+  grid-column: 1/-1;
+  justify-self: center;
+}
+
+@media screen and (max-width: 500px) {
+  .tech-grid {
+    grid-template-columns: 1fr;
+  }
+}
+.grid-box {
+  border-radius: 5px;
+  border: 1px solid #6E7173;
+  text-align: center;
+  margin: 15px;
+}
+.grid-box h2 {
+  background-color: #6E7173;
+  color: #f8f8ff;
+  margin-top: 0;
+  padding: 5px;
+  font-weight: 500;
+}
+.grid-box a {
+  text-decoration: none;
+}
+
+.grid-box a:hover p {
+  text-decoration: underline;
+}
+
+.sqlite-box {
+  grid-column: 1/-1;
+}
+
+.single-tech-grid {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr;
+  gap: 1em;
+}
+
+@media screen and (max-width: 768px) {
+  .single-tech-grid {
+    grid-template-columns: 1fr;
+    gap: 0;
+  }
+
+  .aside {
+    display: none;
+  }
+
+  .main-content {
+    grid-column: 1/-1;
+  }
+}
+.aside {
+  grid-column: 1/2;
+  grid-row: 1/-1;
+}
+
+.main-content {
+  grid-column: 2/-1;
+}
+
 html {
   margin: auto;
   max-width: 64rem;
@@ -6557,9 +6629,9 @@ code {
 
 pre {
   padding: 0 1em;
-  border: 1px solid #ccc;
+  border: 1px solid #6E7173;
   border-radius: 0.3em;
-  background: #f5f5f5;
+  background: #f7f7f7;
 }
 
 pre code {
