--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -9,6 +9,8 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 
 @import url('https://fonts.googleapis.com/css2?family=Mohave&family=Roboto&display=swap');
 
+@import 'technologies';
+@import 'technology';
 @import 'layout';
 @import 'text';
 @import 'image';
