--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -2,6 +2,9 @@
 $accent-color: #ee6c4d;
 $background-color: #f9fafc;
 $background-alternative-color: #b4b4b4;
+$border-color: #6e7173;
+$grid-box-color: #6e7173;
+$pre-background-color: #f7f7f7;
 
 
 
@@ -9,7 +12,7 @@ $background-alternative-color: #b4b4b4;
 $header-font: 'Mohave', sans-serif;
 $main-font: 'Roboto', sans-serif;
 $font-color: #000;
-$font-alternative-color: #fff;
+$font-alternative-color: #f8f8ff;
 $font-size: 100%;
 $line-height: 1.4;
 $magic-number: 1rem * $line-height;
