--- a/themes/kmom02/scss/code.scss
+++ b/themes/kmom02/scss/code.scss
@@ -11,9 +11,9 @@ code {
 
 pre {
     padding: 0 1em;
-    border: 1px solid #ccc;
+    border: 1px solid $border-color;
     border-radius: 0.3em;
-    background: #f5f5f5;
+    background: $pre-background-color;
 }
 
 pre code {
