--- a/themes/kmom02/technologies.twig
+++ b/themes/kmom02/technologies.twig
@@ -6,7 +6,7 @@
         <div class="tech-grid">
             {{ content }}
 
-            {% for page in pages("technologies") %}
+            {% for page in pages("technology") %}
                 <div class="grid-box {{ page.title }}-box">
                     <a href="{{ page.url }}">
                         <h2> {{ page.title }} </h2>
