--- a/themes/kmom02/technology.twig
+++ b/themes/kmom02/technology.twig
@@ -6,7 +6,7 @@
         <div class="single-tech-grid">
             <div class="aside">
                 <ul class="tech-links">
-                    {% for page in pages("technologies")%}
+                    {% for page in pages("technology")%}
                         <li><a href="{{ page.url }}">{{ page.title }}</a></li>
                     {% endfor %}
                 </ul>
