--- a/themes/kmom02/scss/variables-dark.scss
+++ b/themes/kmom02/scss/variables-dark.scss
@@ -1,8 +1,8 @@
 
 $accent-color: #ee6c4d;
-$backgrund-site: #fff;
-$background-color: #f9fafc;
-$background-alternative-color: #b4b4b4;
+$backgrund-site: #000;
+$background-color: #4b4c4d;
+$background-alternative-color: #232425;
 $border-color: #6e7173;
 $grid-box-color: #6e7173;
 $pre-background-color: #f7f7f7;
@@ -12,8 +12,8 @@ $pre-background-color: #f7f7f7;
 /*--------------text----------------------------*/
 $header-font: 'Mohave', sans-serif;
 $main-font: 'Roboto', sans-serif;
-$font-color: #000;
-$font-alternative-color: #f8f8ff;
+$font-color: #f8f8f8;
+$font-alternative-color: #232425;
 $font-code-color: #232425;
 $font-size: 100%;
 $line-height: 1.4;
