--- a/themes/kmom02/css/style-dark.css
+++ b/themes/kmom02/css/style-dark.css
@@ -6544,6 +6544,10 @@ html {
   background-color: #000;
 }
 
+.hidden {
+  display: none !important;
+}
+
 .header {
   display: flex;
   align-items: center;
