embedded youtube video added to gallery

--- a/themes/kmom02/css/style-dark.css
+++ b/themes/kmom02/css/style-dark.css
@@ -6697,3 +6697,22 @@ pre code {
 .gallery {
   margin: 5px;
 }
+
+.embed-container {
+  position: relative;
+  grid-column: 1/-1;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  margin: 5px;
+}
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
