--- a/themes/kmom02/scss/gallery.scss
+++ b/themes/kmom02/scss/gallery.scss
@@ -25,3 +25,23 @@
 .gallery {
     margin: 5px;
 }
+
+.embed-container {
+    position: relative;
+    grid-column: 1 / -1;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    margin: 5px;
+    
+    iframe,
+    object,
+    embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
