--- a/themes/kmom02/scss/gallery.scss
+++ b/themes/kmom02/scss/gallery.scss
@@ -23,6 +23,12 @@
     }
 }
 
+.load-img {
+    img {
+        border: 1px solid $border-color;
+    }
+}
+
 .gallery {
     margin: 5px;
 }
@@ -42,6 +48,11 @@
         position: absolute;
         top: 0;
         left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    .google-sheet {
         width: 100%;
         height: 100%;
     }
