--- a/themes/kmom02/incl/nav.twig
+++ b/themes/kmom02/incl/nav.twig
@@ -3,7 +3,7 @@
         {% if pages["_meta"].meta.logo %}
         <div class="logo">
             <a href="{{ base_url }}">
-                <img src="{{ base_url }}/{{ pages["_meta"].meta.logo|url }}" alt="" />
+                <img src="{{ base_url }}/{{ pages["_meta"].meta.logo|url }}" alt="CSS and JS books" />
             </a>
         </div>
         {% endif %}
