fixed load analysis to match requirements

--- a/themes/kmom02/scss/image.scss
+++ b/themes/kmom02/scss/image.scss
@@ -2,11 +2,20 @@ img {
     border-radius: 5px;
 }
 
-.header {
+/* .header {
     img {
+        max-width: 300px;
         width: 100%;
         //max-width: 30%;
         height: auto;
+    }
+} */
+.logo {
+    img {
+        max-width: 100%;
+        width: 220px;
+        //max-width: 30%;
+        // height: auto;
     }
 }
 
