--- a/themes/kmom02/css/style.css
+++ b/themes/kmom02/css/style.css
@@ -6628,9 +6628,17 @@ img {
   border-radius: 5px;
 }
 
-.header img {
-  width: 100%;
-  height: auto;
+/* .header {
+    img {
+        max-width: 300px;
+        width: 100%;
+        //max-width: 30%;
+        height: auto;
+    }
+} */
+.logo img {
+  max-width: 100%;
+  width: 220px;
 }
 
 .main img {
