--- a/themes/kmom02/scss/layout.scss
+++ b/themes/kmom02/scss/layout.scss
@@ -29,7 +29,8 @@ html {
     align-items: center;
 
     .logo {
-        width: 30%;
+        width: 200px;
+        // width: 30%;
     }
 
     .title {
