--- a/themes/kmom02/css/style.css
+++ b/themes/kmom02/css/style.css
@@ -338,6 +338,7 @@ template {
   display: none;
 }
 
+/*-------------newHome--------------------------*/
 /*--------------text----------------------------*/
 /*!
  * Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com
@@ -6563,7 +6564,7 @@ html {
   align-items: center;
 }
 .site-header .logo {
-  width: 30%;
+  width: 200px;
 }
 .site-header .title {
   padding: 1rem;
@@ -6630,15 +6631,14 @@ img {
 
 /* .header {
     img {
-        max-width: 300px;
+        // max-width: 367px;
         width: 100%;
         //max-width: 30%;
         height: auto;
     }
 } */
 .logo img {
-  max-width: 100%;
-  width: 220px;
+  width: 200px;
 }
 
 .main img {
@@ -6732,4 +6732,114 @@ pre code {
 .embed-container .google-sheet {
   width: 100%;
   height: 100%;
+}
+
+.newhome-grid {
+  display: grid;
+  gap: 1em;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 50px);
+  padding: 10px;
+  justify-items: center;
+}
+.newhome-grid p {
+  margin: 0;
+}
+.newhome-grid h1 {
+  margin: 0;
+  padding: 0;
+  font-size: 1.5em;
+}
+
+.border-main {
+  padding: 10px;
+  border: 3px solid #f00;
+  grid-column: 1/3;
+  grid-row: 1/1;
+  justify-self: center;
+  overflow: hidden;
+  /* h1 {
+      margin: 0;
+      padding: 0;
+      font-size: 1.5em;
+  } */
+}
+
+.main-color {
+  color: #f00;
+  font-size: 1.4em;
+}
+
+.alt-color {
+  color: #0f0;
+  font-size: 1.4em;
+}
+
+.name {
+  grid-column: 2/4;
+  grid-row: 2/3;
+}
+
+.birth {
+  grid-column: 3/5;
+  grid-row: 3/4;
+}
+
+.age {
+  grid-column: 4/6;
+  grid-row: 4/5;
+}
+
+.location {
+  grid-column: 5/7;
+  grid-row: 5/6;
+}
+
+.lastname {
+  grid-column: 6/8;
+  grid-row: 6/7;
+}
+
+.border-bottom {
+  padding: 10px;
+  border: 3px solid #f00;
+  grid-column: 7/9;
+  grid-row: 7/8;
+  justify-self: center;
+  overflow: hidden;
+  /* h1 {
+      margin: 0;
+      padding: 0;
+      font-size: 1.5em;
+  } */
+}
+
+.pico {
+  grid-column: 5/7;
+  grid-row: 3/4;
+}
+
+.markdown {
+  grid-column: 6/8;
+  grid-row: 2/3;
+}
+
+.markup {
+  grid-column: 7/9;
+  grid-row: 1/2;
+}
+
+.design {
+  grid-column: 3/5;
+  grid-row: 5/6;
+}
+
+.color {
+  grid-column: 2/4;
+  grid-row: 6/7;
+}
+
+.typography {
+  grid-column: 1/3;
+  grid-row: 7/8;
 }
