--- a/themes/kmom02/scss/image.scss
+++ b/themes/kmom02/scss/image.scss
@@ -4,16 +4,17 @@ img {
 
 /* .header {
     img {
-        max-width: 300px;
+        // max-width: 367px;
         width: 100%;
         //max-width: 30%;
         height: auto;
     }
 } */
+
 .logo {
     img {
-        max-width: 100%;
-        width: 220px;
+        // max-width: 100%;
+        width: 200px;
         //max-width: 30%;
         // height: auto;
     }
