--- a/themes/kmom02/scss/variables-dark.scss
+++ b/themes/kmom02/scss/variables-dark.scss
@@ -1,4 +1,3 @@
-
 $accent-color: #ee6c4d;
 $backgrund-site: #000;
 $background-color: #4b4c4d;
@@ -8,6 +7,9 @@ $grid-box-color: #6e7173;
 $pre-background-color: #f7f7f7;
 
 
+/*-------------newHome--------------------------*/
+$newhome-color-main: #0f0;
+$newhome-color-alt: #f00;
 
 /*--------------text----------------------------*/
 $header-font: 'Mohave', sans-serif;
