--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -1,4 +1,3 @@
-
 $accent-color: #ee6c4d;
 $backgrund-site: #fff;
 $background-color: #f9fafc;
@@ -8,6 +7,9 @@ $grid-box-color: #6e7173;
 $pre-background-color: #f7f7f7;
 
 
+/*-------------newHome--------------------------*/
+$newhome-color-main: #f00;
+$newhome-color-alt: #0f0;
 
 /*--------------text----------------------------*/
 $header-font: 'Mohave', sans-serif;
