--- a/themes/kmom02/scss/variables-dark.scss
+++ b/themes/kmom02/scss/variables-dark.scss
@@ -9,7 +9,7 @@ $pre-background-color: #f7f7f7;
 
 /*-------------newHome--------------------------*/
 $newhome-color-main: #0f0;
-$newhome-color-alt: #f00;
+$newhome-color-alt: #C21E56;
 
 /*--------------text----------------------------*/
 $header-font: 'Mohave', sans-serif;
